# rust_axum_crud

./: .env  .gitignore  Cargo.toml  README.md  db.sql  naming_convention.txt
src/: handlers.rs  main.rs
