[package]
name = "workspaces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls" , "postgres", "uuid", "json", "macros"]}
serde_json = "1.0.116"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http ={ version = "0.5.2", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.199", features= ["derive"] }
chrono = {version = "0.4.38", features= ["serde"] }
